datepicker 双向绑定优化

--- a/example/pages/components/data-entry/datepicker/index.html
+++ b/example/pages/components/data-entry/datepicker/index.html
@@ -35,6 +35,7 @@
           ng-model="pickerDate"
           ma-view="date"
           ma-min-view="date"
+          ma-max-date="maxDate"
           ma-format="YYYY-MM-DD">
       </div>
       <div class="col-8 mb-20">
