modal 添加class 配置

--- a/example/pages/components/feedback/modal/index.html
+++ b/example/pages/components/feedback/modal/index.html
@@ -22,6 +22,7 @@
         const defaultConfig = {
           scope: null, // 作用域 默认 $rootScope
           title: '', // 标题
+          cls: '', // 样式名称
           content: '', //内容 只有在 confirm 和 delete 的时候使用，其它无效
           template: '', // 主体内容模板
           showClose: true, // 显示关闭按钮
