--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -4,7 +4,7 @@
     ng-readonly="true"
     ng-model="model"
     view="{{view}}"
-    id="a12312312"
+    id="{{datePickerId}}"
     date-change="changeValue"
     min-view="{{minView}}"
     min-date="_minDate"
