--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -2,7 +2,7 @@
   <input class="ma-input"
     date-time
     ng-readonly="true"
-    ng-model="model"
+    ng-model="dateModel"
     view="{{view}}"
     id="{{datePickerId}}"
     date-change="changeValue"
