--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -166,7 +166,7 @@ $size in $paddings {
 @each $header,
 $size in $margins {
   .#{$header}-30 {
-    padding-#{$size}: 30px;
+    margin-#{$size}: 30px;
   }
   .#{$header}-20 {
     margin-#{$size}: 20px;
@@ -403,7 +403,7 @@ body > .main {
     background-color: $white;
     -webkit-box-shadow: 0 0 4px 0 rgba($black, 0.1);
     box-shadow: 0 0 4px 0 rgba($black, 0.1);
-    border-radius: 5px;
+    border-radius: 2px;
   }
 }
 
