--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -61,7 +61,7 @@
           limit: Number.MAX_VALUE,
           size: 10 * 1024 * 1000,
           accept: '',
-          uploadText: '上传图片'。
+          uploadText: '上传图片',
           convert: function (data, response){
 
           }
