--- a/src/components/upload/src/maUploadImageTpl.html
+++ b/src/components/upload/src/maUploadImageTpl.html
@@ -39,8 +39,17 @@
       ng-show="file.progress !== undefined && file.progress !== 100"></ma-progress>
   </div>
 
+
   <div class="upload-image-item add"
     ng-hide="$ctrl.uploadConfig.limit <= ngModel.length">
+    <ma-icon ma-type="plus"></ma-icon>
+    <div>{{$ctrl.uploadConfig.uploadText || '上传照片'}}</div>
+  </div>
+
+  <div class="upload-image-item add-double"
+    ng-repeat="item in $ctrl.uploadConfig.limitArray track by $index"
+    ma-click="clickInput($event)"
+    ng-if="$index < ngModel.length || $index === 0">
     <ma-icon ma-type="plus"></ma-icon>
     <div>{{$ctrl.uploadConfig.uploadText || '上传照片'}}</div>
   </div>
