--- a/example/pages/components/general/button/index.html
+++ b/example/pages/components/general/button/index.html
@@ -5,7 +5,8 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="general-button-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Button 按钮</h2>
     <p>按钮用于开始一个即时操作。</p>
     <h3>代码演示</h3>
@@ -13,38 +14,67 @@
       <div class="col-24">
         <h4>Size</h4>
         <div class="ma-button-group">
-          <ma-button ma-active="{{sizeModel == 'large'}}" ma-click="sizeModel = 'large'">Large</ma-button>
-          <ma-button ma-active="{{sizeModel == 'default'}}" ma-click="sizeModel = 'default'">Default</ma-button>
-          <ma-button ma-active="{{sizeModel == 'small'}}" ma-click="sizeModel = 'small'">Small</ma-button>
-          <ma-button ma-active="{{sizeModel == 'mini'}}" ma-click="sizeModel = 'mini'">Mini</ma-button>
+          <ma-button ma-size="{{sizeModel}}"
+            ma-active="{{sizeModel == 'large'}}"
+            ma-click="sizeModel = 'large'">Large</ma-button>
+          <ma-button ma-size="{{sizeModel}}"
+            ma-active="{{sizeModel == 'default'}}"
+            ma-click="sizeModel = 'default'">Default</ma-button>
+          <ma-button ma-size="{{sizeModel}}"
+            ma-active="{{sizeModel == 'small'}}"
+            ma-click="sizeModel = 'small'">Small</ma-button>
+          <ma-button ma-size="{{sizeModel}}"
+            ma-active="{{sizeModel == 'mini'}}"
+            ma-click="sizeModel = 'mini'">Mini</ma-button>
         </div>
       </div>
       <div class="col-12">
         <h4>Default</h4>
-        <ma-button ma-size="{{sizeModel}}"><ma-icon ma-type="download"></ma-icon>Default</ma-button>
-        <ma-button ma-size="{{sizeModel}}" ng-disabled="true">Default</ma-button>
+        <ma-button ma-size="{{sizeModel}}">
+          <ma-icon ma-type="download"></ma-icon>Default</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ng-disabled="true">Default</ma-button>
 
         <h4>Primary</h4>
-        <ma-button ma-size="{{sizeModel}}" ma-type="primary">Primary</ma-button>
-        <ma-button ma-size="{{sizeModel}}" ma-type="primary" ng-disabled="true">Primary</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-type="primary">Primary</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-type="primary"
+          ng-disabled="true">Primary</ma-button>
 
         <h4>Danger</h4>
-        <ma-button ma-size="{{sizeModel}}" ma-type="danger">Danger</ma-button>
-        <ma-button ma-size="{{sizeModel}}" ma-type="danger" ng-disabled="true">Danger</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-type="danger">Danger</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-type="danger"
+          ng-disabled="true">Danger</ma-button>
       </div>
 
       <div class="col-12">
         <h4>Default Flat</h4>
-        <ma-button ma-size="{{sizeModel}}" ma-flat="true">Default</ma-button>
-        <ma-button ma-size="{{sizeModel}}" ma-flat="true" ng-disabled="true">Default</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-flat="true">Default</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-flat="true"
+          ng-disabled="true">Default</ma-button>
 
         <h4>Primary Flat</h4>
-        <ma-button ma-size="{{sizeModel}}" ma-flat="true" ma-type="primary">Primary</ma-button>
-        <ma-button ma-size="{{sizeModel}}" ma-flat="true" ma-type="primary" ng-disabled="true">Primary</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-flat="true"
+          ma-type="primary">Primary</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-flat="true"
+          ma-type="primary"
+          ng-disabled="true">Primary</ma-button>
 
         <h4>Danger Flat</h4>
-        <ma-button ma-size="{{sizeModel}}" ma-flat="true" ma-type="danger">Danger</ma-button>
-        <ma-button ma-size="{{sizeModel}}" ma-flat="true" ma-type="danger" ng-disabled="true">Danger</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-flat="true"
+          ma-type="danger">Danger</ma-button>
+        <ma-button ma-size="{{sizeModel}}"
+          ma-flat="true"
+          ma-type="danger"
+          ng-disabled="true">Danger</ma-button>
       </div>
     </div>
 
