--- a/src/scss/_upload.scss
+++ b/src/scss/_upload.scss
@@ -110,8 +110,12 @@
       margin: auto;
     }
     .image {
-      width: 86px;
-      height: 86px;
+      position: absolute;
+      left: 4px;
+      top: 4px;
+      bottom: 4px;
+      right: 4px;
+      margin: auto;
       background-size: cover;
       background-position: top center;
       i.iconfont {
@@ -133,10 +137,11 @@
       visibility: hidden;
       opacity: 0;
       position: absolute;
-      left: 5px;
-      top: 5px;
-      width: 86px;
-      height: 86px;
+      left: 4px;
+      top: 4px;
+      bottom: 4px;
+      right: 4px;
+      margin: auto;
       line-height: 30px;
       padding-top: 28px;
       background-color: rgba($black, 0.4);
