--- a/src/components/tree-select/src/multiSelectTpl.html
+++ b/src/components/tree-select/src/multiSelectTpl.html
@@ -8,15 +8,15 @@
 }">
   <ma-input placeholder="{{$select.selectModel.length ? '' : $select.placeholder}}"
     ng-class="{
-      'ma-input-arrow-down': !$select.open,
-      'ma-input-arrow-up': $select.open
-    }"
+    'ma-input-arrow-down': !$select.open,
+    'ma-input-arrow-up': $select.open
+  }"
     ng-disabled="selectDisabled"></ma-input>
   <ul class="select2-choices"
     ma-click="$select.showSelect()"
     ng-class="{
-      'has-selected': $select.selectModel.length
-    }">
+    'has-selected': $select.selectModel.length
+  }">
     <li class="ui-select-match-item select2-search-choice ng-scope"
       ng-repeat="$item in $select.selectModel track by $index">
       <span>
@@ -27,8 +27,9 @@
         ma-click="$select.removeChoice($item, $event)"></ma-icon>
     </li>
   </ul>
-  <div class="ui-select-dropdown select2-drop select2-with-searchbox select2-drop-active"
-    ng-class="{'select2-display-none': !$select.open}">
+  <div class="ui-select-dropdown select2-drop select2-with-searchbox select2-drop-active select2-display-none"
+
+    ng-class="{'select2-display-show': $select.open}">
     <div class="search-container select2-search"
       ng-class="{'ui-select-search-hidden':!$select.searchEnabled, 'select2-search':$select.searchEnabled}">
       <div class="ma-input ma-input-search-normal">
@@ -71,10 +72,10 @@
               style="pointer-events:none;"
               ng-disabled="$select.selectDisabled"
               ng-class="{
-              'has-sub': item.__checkbox_has_sub,
-              'has-parent': item.__checkbox_has_parent,
-              'custom-multi-select-checkbox-hidden': item.hiddenCheck
-            }">
+            'has-sub': item.__checkbox_has_sub,
+            'has-parent': item.__checkbox_has_parent,
+            'custom-multi-select-checkbox-hidden': item.hiddenCheck
+          }">
               <span ng-bind-html="item.text"></span>
             </ma-checkbox>
           </div>
