--- a/src/scss/_popconfirm.scss
+++ b/src/scss/_popconfirm.scss
@@ -7,8 +7,8 @@
   .ma-tooltip-content {
     padding: 12px 15px;
     background-color: $white;
-    -webkit-box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.20);
-    box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.20);
+    -webkit-box-shadow: 0 4px 20px 2px rgba(0, 34, 77, .1);
+    box-shadow: 0 4px 20px 2px rgba(0, 34, 77, .1);
     border-radius: 4px;
     font-size: $font14;
     color: $base;
