--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -30,8 +30,8 @@
     margin: 200px auto 50px auto;
     z-index: 2;
     background: $white;
-    -webkit-box-shadow: 0 2px 6px 1px rgba($black, 0.20);
-    box-shadow: 0 2px 6px 1px rgba($black, 0.20);
+    -webkit-box-shadow: 0 4px 20px 2px rgba(0, 34, 77, .1);
+    box-shadow: 0 4px 20px 2px rgba(0, 34, 77, .1);
     border-radius: 4px;
     -webkit-transition: opacity 300ms ease, visibility 300ms ease, -webkit-transform 300ms ease;
     transition: opacity 300ms ease, visibility 300ms ease, -webkit-transform 300ms ease;
