--- a/src/components/table/src/trTpl.html
+++ b/src/components/table/src/trTpl.html
@@ -1,6 +1,6 @@
 <tr ng-class="{
     'selected-row': selector && $tableCtrl.checkboxes.items[row&&{index}[$tableCtrl.dataflagId]]
   }"
-  class="{{$tableCtrl.tableConfig.rowCustomClass}}">
+  class="&&{rowCustomClass}">
 
 </tr>
