默认字体修改

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,6 +1,6 @@
 body {
   font-size: 14px;
-  font-family: "Microsoft YaHei", Helvetica, Arial, sans-serif;
+  font-family: PingFangSC-Regular, Microsoft YaHei, Helvetica, Arial, sans-serif;
   line-height: 20px;
   color: $base;
   background-color: $background;
