--- a/example/pages/components/data-entry/transfer2/index.html
+++ b/example/pages/components/data-entry/transfer2/index.html
@@ -56,7 +56,7 @@
     </div>
     <h3>API</h3>
     <div class="p">
-      <a href="#!/components/data-enpty/transfer">API<a>
+      <a href="#!/components/data-enpty/transfer">同transfer API<a>
     </div>
   </div>
 </div>
