--- a/src/components/tree-select/src/itemTpl.html
+++ b/src/components/tree-select/src/itemTpl.html
@@ -10,8 +10,7 @@
       <i class="tree-arrow-click"
         ng-if="item&&{index}.sub.length"
         ma-click="$select.toggleTree($event, item&&{index})">
-        <i class="tree-arrow"
-          ng-if="item&&{index}.sub.length"></i>
+        <i class="tree-arrow"></i>
       </i>
       <!-- <div class="click-mask"></div> -->
       <ma-checkbox unclick
